--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,6 +7,18 @@
     <fragment
         android:id="@+id/chatsFragment"
         android:name="com.github.whatsmock.ui.chats.ChatsFragment"
-        android:label="ChatsFragment" />
-
+        android:label="ChatsFragment">
+        <action
+            android:id="@+id/action_chatsFragment_to_chatDetailFragment"
+            app:destination="@id/chatDetailFragment"
+            app:popUpTo="@id/chatsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/chatDetailFragment"
+        android:name="com.github.whatsmock.ui.chatdetail.ChatDetailFragment"
+        android:label="ChatDetailFragment">
+        <argument
+            android:name="chat"
+            app:argType="android.os.Parcelable" />
+    </fragment>
 </navigation>
